<resources>
    <string name="app_name">Huawei Demo Map App</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="LoginPage_Or">OR</string>
    <string name="facebook_app_id">1582984365191562</string>
    <string name="fb_login_protocol_scheme">fb1582984365191562</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Map</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Log Out</string>
    <string name="google_maps_API">AIzaSyA-C3kZwrGogXfhJEe8N-My1xq0QFMq9zg</string>
    <string name="home_second">Home Second</string>
    <string name="title_activity_maps">Map</string>
    <string name="profile_string">Profile</string>
    <string name="user_preferences">User Preferences</string>
    <string name="dark_mode_string">Dark Mode:</string>
    <string name="notify_distance">Notify Distance:</string>
    <string name="save_settings">Save</string>
    <string name="application_settings">Application Settings</string>
    <string name="defaultDistance">10m</string>
    <string name="backButton">Back</string>
    <string name="sign_in_with_google">Sign in With Google</string>
    <string name="set_first_location_text">Set First Location</string>
    <string name="move_camera">Move Camera</string>
</resources>
