<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout

        android:id="@+id/SettingLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:context=".Activities.Fragments.SettingsFragment"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonLayout">



        <TextView
            android:id="@+id/preferenceTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_preferences"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textStyle="bold"
            android:textSize="30sp"
            android:background="@color/settingsBar"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/darkModeImage"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:src="@drawable/dark_android"
                android:padding="8dp"/>
            <View android:layout_height="fill_parent"
                android:layout_width="2px"
                android:background="@color/colorPrimary"/>

            <TextView
                android:layout_width="125dp"
                android:layout_height="match_parent"
                android:text="@string/dark_mode_string"
                android:textAlignment="center"
                android:gravity="center" />
            <View android:layout_height="fill_parent"
                android:layout_width="2px"
                android:background="@color/colorPrimary"/>
            <Switch
                android:id="@+id/darkModeSwitch"
                android:layout_height="50dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingStart="50dp"
                android:textSize="15sp" />

        </LinearLayout>


        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/application_settings"
            android:textStyle="bold"
            android:background="@color/settingsBar"
            android:textSize="30sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/mapImageSettings"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_menu_map"
                android:layout_marginTop="10dp"/>
            <View android:layout_height="fill_parent"
                android:layout_width="2px"
                android:background="@color/colorPrimary"/>
            <TextView
                android:layout_width="125dp"
                android:layout_height="match_parent"
                android:text="@string/notify_distance"
                android:textAlignment="center"
                android:gravity="center" />
            <View android:layout_height="fill_parent"
                android:layout_width="2px"
                android:background="@color/colorPrimary"/>

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_weight="7"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/notifyTextView"
                app:layout_constraintTop_toBottomOf="@+id/view2"
                android:layout_width="wrap_content"
                android:max="199" />
            <View android:layout_height="fill_parent"
                android:layout_width="2px"
                android:background="@color/colorPrimary"/>
            <TextView
                android:id="@+id/distanceTextView"
                android:layout_height="match_parent"
                android:layout_width="50dp"
                android:paddingRight="5dp"
                android:paddingLeft="5dp"
                android:textStyle="bold"
                android:paddingTop="10dp"
                android:textSize="15sp"
                android:text="@string/defaultDistance" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonLayout"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/SettingLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <Button
            android:id="@+id/backButton"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backButton"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"/>
        <View android:layout_height="fill_parent"
            android:layout_width="2px"
            android:background="#ffffff"/>
        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save_settings"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"/>
    </LinearLayout>
    

</androidx.constraintlayout.widget.ConstraintLayout>